update to Beta 2
- Soldier Hick inside the barracks should no longer approach the PC if Brage was brought in.
- If Brage was brought to the temple, Nalin will give a hint that the PC should talk to Oublek to proceed.
- If Brage was brought to Oublek, he will initiate dialogue to proceed the quest.
- After Brage accepted his real sword, there is no timer. The PC needs to leave the temple once. Upon return, Brage will ask to join the group.

--- a/c#brage/readme.c#brage.english.html
+++ b/c#brage/readme.c#brage.english.html
@@ -64,14 +64,14 @@ Brage's Redemption was implemented with WeiDU with highest priority to compatibi
 <div class="section">
 <h2> <a name="generalcontent" id="generalcontent">General Info</a></h2>
 The mod introduces a quest extention to the Brage quest in the game (BG1). Brage is the captain of the Nashkel guard and went missing after killing his family. The quest extention to prove his innocence was originally published as the component "Brage's Sword" in the mod <a href="https://www.baldurs-gate.de/index.php?resources/jasteys-baldurs-gate-mini-quests-and-begegnungen-modifikation.17/">bgqe</a>.<br /> 
-To gain Brage as a joinable NPC, the PC needs to prove his innocence as well as give him back his real sword. A day after that, Brage can be visited inside the temple of Helm in Nashkel and will offer to join the PC.<br />
+To gain Brage as a joinable NPC, the PC needs to prove his innocence as well as give him back his real sword. After leaving the temple once after that, Brage can be visited inside the temple of Helm in Nashkel and will offer to join the PC.<br />
 The quest to make Brage a joinable NPC can be completed before clearing the Nashkel mines. See the spoiler section for information.<br />
 <h2> <a name="quest" id="quest">Beginnings Quest: Brage's Sword (BG1)</a></h2>
 This content gives the player the possibility to prove that Brage fell victim to an intrigue and save him from a death by the gallows - if the PC wants to. There is an evil quest option, which will bring Brage to the gallows (i.e. he will be gone from the game). In this case, he will not be available as a joinable NPC.<br />
 Brage has to be brought to Nashkel alive. The mod also adds the possibility to bring him to Oublek (i.e. the Nashkel authorities) instead of to the temple. This was unfinished original game content. (For this possibility, please note the install order as mentioned above).<br />
 <h2> <a name="npc" id="npc">Brage as a Joinable NPC</a></h2>
 <strong>BG1:</strong><br /><br />
-After proving his innocence, bringing him his sword, and waiting for some ingame hours (not a full day), Brage will ask to join the PC's group to both repay them and also to be part of bringing the culprits of the intrigue to justice. He doesn't have to be accepted right away but can also be recruited later.<br />
+After proving his innocence, bringing him his sword, and leaving the temple once - representing the time that passes so Brage can come to terms with what happened - Brage will ask to join the PC's group to both repay them and also to be part of bringing the culprits of the intrigue to justice. He doesn't have to be accepted right away but can also be recruited later.<br />
 The BG1 part contains a friendship path with 11 dialogues, dealing with Brage's guilt and the loss of his family. The friendship path is best suited for a caring, friendly PC. Brage banters with some of the BioWare NPCs. As of version Beta 1, the mod includes banters for Brage with the following NPCs: Ajantis, Eldoth, Garrick, Imoen, Minsc & Dynaheir, Montaron, Viconia, Xzar, Yeslick. There are dialogues with interjections of Edwin, Jaheira, and Khalid, also. Brage reacts to the main game events. He has a lot of interjections in Nashkel as he is well-known in the town. As of version Beta 1, there are no other interjections to game events. Brage has s small player initiated dialogue (PID) which will not be updated throughout BG1.<br />
 To experience all banters with Eldoth and Viconia, most cursed items should be identified and placed in the group's inventory.<br />
 After 2/3 of the friendship path, Brage will tell that he wants to visit his family's grave in Nashkel. The PC does not have to be with him while it happens, but more content will be witnessed if they do (otherwise, Brage will talk about it upon rejoining).<br /><br />
@@ -116,7 +116,7 @@ For the quickest way of solving the quest (especially before going into the mine
 		<li>Give Oublek the letter to prove Brage's innocence.</li>
 		<li>Talk to Oublek again to trigger the Brage's trial cutscene.</li>
 		<li>After clearing his name, Brage will be inside the temple in Nashkel. Persuade him to take his real sword.</li>
-		<li>After Brage took his sword and some ingame hours passed, Nalin will address the PC that Brage wants to speak with them. Brage will ask to join and can be taken into the group.</li>
+		<li>After Brage took his sword and the PC left the temple once and returns, Nalin will address the PC that Brage wants to speak with them. Brage will ask to join and can be taken into the group.</li>
       </ul> <br />	  
 Note: For the case that the merchant Borda was not killed upon the first meeting but Laryssa, Brage's cousin, was killed upon the first confrontation, the last needed quest clue will be found no sooner than Tazok's tent in the bandits' camp.<br />
 </div>
@@ -141,6 +141,12 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Version History</a></h1>
 <div class="section">
+Version Beta 2:</br>
+- Soldier Hick inside the barracks should no longer approach the PC if Brage was brought in.<br />
+- If Brage was brought to the temple, Nalin will give a hint that the PC should talk to Oublek to proceed.<br />
+- If Brage was brought to Oublek, he will initiate dialogue to proceed the quest.<br />
+- After Brage accepted his real sword, there is no timer. The PC needs to leave the temple once. Upon return, Brage will ask to join the group.<br />
+<br /><br />
 Version Beta 1:</br>
 - First public release with BG1 content.<br />
 <br />
