--- a/c#brage/readme.c#brage.german.html
+++ b/c#brage/readme.c#brage.german.html
@@ -64,7 +64,7 @@ Brage's Redemption wurde mit WeiDU und mit dem Anspruch gr&ouml;&szlig;tm&ouml;g
 <div class="section">
 <h2> <a name="generalcontent" id="generalcontent">Generelles</a></h2>
 Die Mod f&uuml;gt zun&auml;chst eine Questerweiterung zur originalen Brage-Quest in BG1 ein. Brage ist der Hauptmann der Garde in Nashkell, der verschwunden ist, nachdem er seine Familie get&ouml;tet hat. Die Questerweiterung, durch die seine Unschuld bewiesen werden kann, war urspr&uuml;nglich eine eigenst&auml;ndige Komponente in der Mod <a href="https://www.baldurs-gate.de/index.php?resources/jasteys-baldurs-gate-mini-quests-and-begegnungen-modifikation.17/">bgqe</a> mit dem Namen "Brages Schwert".<br /> 
-Damit Brage in BG1 als NSC in die Gruppe aufgenommen werden kann, muss zuerst seine Unschuld bewiesen und ihm sein richtiges Schwert gegeben werden. Einen knappen Spieltag danach kann Brage im Tempel des Helm in Nashkell aufgesucht werden, und er wird dem HC anbieten, ihn zu begleiten.<br />
+Damit Brage in BG1 als NSC in die Gruppe aufgenommen werden kann, muss zuerst seine Unschuld bewiesen und ihm sein richtiges Schwert gegeben werden. Sobald der HC den Tempel einmal verlassen hat und wieder zurückkehrt, kann Brage im Tempel des Helm in Nashkell aufgesucht werden, und er wird dem HC anbieten, ihn zu begleiten.<br />
 Die Quest um seine Unschuld zu beweisen kann vor dem ersten Betreten der Minen von Nashkell erledigt werden. Siehe hierzu die Tipps in der Sektion Walkthrough/Spoilers.<br />
 <h2> <a name="quest" id="quest">Startquest: Brages Schwert (BG1-Inhalt)</a></h2>
 Durch die Mod kann man die Hintergr&uuml;nde um Brages verfluchten Zweihänder erkunden und nachweisen, dass Brage Opfer einer Intrige geworden ist und ihn so vor dem Galgen retten - wenn man das m&ouml;chte.<br />
@@ -72,7 +72,7 @@ Voraussetzung ist, dass man Brage lebend nach Nashkell bringt. Hierzu f&uuml;gt 
 Es existieren b&ouml;se Questl&ouml;sungen, die zu einer Verurteilung Brages zum M&ouml;rder enden, f&uuml;r welche Brage danach nicht mehr im Spiel als aufnehmbarer NPC zur Verf&uuml;gung steht.<br />
 <h2> <a name="npc" id="npc">Brage als aufnehmbarer NSC</a></h2>
 <strong>BG1:</strong><br /><br />
-Nachdem Brages Unschuld bewiesen wurde, er sein echtes Schwert akzeptiert hat und ein knapper Spieltag vergangen ist, wird Brage den HC bitten, sich ihm/ihr anschlie&szlig;en zu d&uuml;rfen. Brage m&ouml;chte dem/der HC einerseits eine Gegenleistung f&uuml;r die Hilfe geben, andererseits aber auch selbst daran mitarbeiten, die Hinterm&auml;nner der Intrige gegen ihn zu stellen. Sein Gesuch muss nicht sofort akzeptiert werden, sondern er kann auch sp&auml;ter noch im Tempel rekrutiert werden.<br />
+Nachdem Brages Unschuld bewiesen wurde, er sein echtes Schwert akzeptiert hat und der HC einmal aus dem Tempel getreten ist - als symbolische Zeit, die Brage braucht, um seine Gedanken zu ordnen - wird Brage den HC bitten, sich ihm/ihr anschlie&szlig;en zu d&uuml;rfen. Brage m&ouml;chte dem/der HC einerseits eine Gegenleistung f&uuml;r die Hilfe geben, andererseits aber auch selbst daran mitarbeiten, die Hinterm&auml;nner der Intrige gegen ihn zu stellen. Sein Gesuch muss nicht sofort akzeptiert werden, sondern er kann auch sp&auml;ter noch im Tempel rekrutiert werden.<br />
 Der BG1-Teil enth&auml;lt einen Freundschaftspfad mit 11 Dialogen, in denen Brage vornehmlich versucht, seine Schuldgef&uuml;hle und seine Trauer zu verarbeiten. Die Dialoge sind am besten f&uuml;r HCs geeignet, die ihm zuh&ouml;ren und ihn unterst&uuml;tzen wollen. Brage hat ebenfalls Dialoge, sog. Banter, mit manchen BioWare NSCs. In Version Beta 1 unterh&auml;lt sich Brage mit den folgenden NSCs: Ajantis, Eldoth, Garrick, Imoen, Minsc & Dynaheir, Montaron, Viconia, Xzar, Yeslick. Es gibt weitere Dialoge, in denen auch die NSCs Edwin, Jaheira und Khalid etwas sagen, wenn sie zu diesem Zeitpunkt in der Gruppe sind. Brage reagiert auf die wichtigen Spiel-Meilensteine, hat aber sonst bisher keine direkten Einmischdialoge. Er ist in Nashkell bekannt und provoziert dort Reaktionen der Bewohner. Brage hat einen kleinen "Klickdialog" (PID) der im Laufe des Spiels keine weiteren Frageoptionen erh&auml;lt.<br />
 Um mit Eldoth und Viconia alle Banter zu erhalten, sollten die meisten verfluchten Gegenst&auml;nde, die im Spiel gefunden werden k&ouml;nnen, identifiziert und ins Inventar gelegt werden.<br />
 Nach 2/3 der Freundschaftsdialoge bittet Brage darum, nach Nashkell zur&uuml;ckzukehren um das Grab seiner Familie zu  besuchen. Der HC muss nicht bei dem eigentlichen Gang zum Friedhof dabei sein um diesen Quest sinnvoll abzuschlie&szlig;en, in diesem Fall wird aber etwas mehr Inhalt zu sehen sein (&uuml;ber den Barge sonst berichtet, wenn man ihn wiedertrifft).<br /><br />
@@ -108,7 +108,7 @@ Der schnellste Weg (vor allem vor dem Betreten der Minen, damit man Brage dorthi
       <ul> 
 		<li>Auf der Karte mit dem Xvartdorf mit dem fahrenden H&auml;ndler Borda sprechen. Wenn man ihn hier bedroht und bek&auml;mpft, erh&auml;lt man sofort einen wichtigen Brief und Brages echtes Schwert. Dies ist aber nicht n&ouml;tig, um die Quest vor dem Betreten der Minen abzuschlie&szlig;en.</li>
 		<li>Zu Brage gehen. Wenn Borda nicht get&ouml;tet wurde, m&uuml;sste Brages Kusine Laryssa am Leben gelassen werden, um den Quest vor dem Banditenlager abschlie&szlig;en zu k&ouml;nnen. Brage muss lebend nach Nashkell gebracht werden. Hierbei spielt es keine Rolle, ob er in den Tempel zu Nalin gebracht wird oder die durch die Mod eingef&uuml;gte M&ouml;glichkeit genutzt wird, ihn Oublek auszuliefern.</li>
-		<li>Mit Oublek sprechen und die Quest "Captain Brages Schuld" erhalten.</li>
+		<li>Im Gespräch mit Oublek die Quest "Captain Brages Schuld" erhalten.</li>
 		<li>Den verfluchten Zweih&auml;nder dem Priester Nalin im Tempel von Nashkell zeigen um von ihm best&auml;tigt zu bekommen, dass er verflucht ist.</li>
 		<li>Wenn der H&auml;ndler Borda noch nicht get&ouml;tet wurde, trifft man nun Laryssa vor dem Tempel, die einen Hinseis zu einem H&auml;ndler auf dem Karneval in Nashkell gibt. Dieser H&auml;ndler befindet sich im s&uuml;dlichsten Zelt.</li>
 		<li>Oublek vom Fluch auf dem Zweih&auml;nder erz&auml;hlen, den Nalin best&auml;tigt hat.</li>
@@ -117,7 +117,7 @@ Der schnellste Weg (vor allem vor dem Betreten der Minen, damit man Brage dorthi
 		<li>Oublek den Brief geben, um Brages Unschuld zu beweisen.</li>
 		<li>Noch einmal mit Oublek sprechen, um Brages Gerichtsszene zu triggern.</li>
 		<li>Nachdem seine Unschuld festgestellt wurde, kann Brage im Tempel in Nashkell gefunden werden. Er muss &uuml;berredet werden, sein richtiges Schwert anzunehmen.</li>
-		<li>Nachdem Brage sein richtiges Schwert angenommen hat und ein knapper Speiltag vergangen ist, wird der Priester Nalin der Gruppe sagen, dass Brage mit dem HC sprechen m&ouml;chte. Brage wird nun darum bitten, in die Gruppe aufgenommen zu werden.</li>
+		<li>Nachdem Brage sein richtiges Schwert angenommen hat und er einmal im Tempel alleine gelassen wurde, wird der Priester Nalin der Gruppe sagen, dass Brage mit dem HC sprechen m&ouml;chte. Brage wird nun darum bitten, in die Gruppe aufgenommen zu werden.</li>
       </ul> <br />	  
 Hinweis: Falls man Borda bei der Originalbegegnung beim Xvartdorf nicht get&ouml;tet hat, Laryssa jedoch als Infogeberin ausf&auml;llt (weil man sie also vor der Konfrontation mit Brage get&ouml;tet hat), findet man den letzten Hinweis (erst) in Tazoks Zelt im Banditenlager.<br />
 </div>
@@ -142,6 +142,11 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Versionshistorie</a></h1>
 <div class="section">
+Version Beta 2:</br>
+- Der Soldat Hick in der Kaserne ist nicht mehr da, nachmdem man Brage zurückgebracht hat.<br />
+- Wenn Brage zum Tempel gebracht wurde, gibt Nalin einen Hinweis, dass der HC mit Oublek sprechen sollte, um mit Barges Quest weiterzukommen.<br />
+- Wenn Brage zu Oublek gebracht wurde, spricht dieser nun selbst weiter und vergibt den Quest.<br />
+- Nachdem Brage sein richtiges Schwert akzeptiert hat, läuft nun kein Timer mehr, sondern der HC muss den Tempel einmal verlassen. Nach dem erneuten Betreten bittet Brage wie vorher darum, in die Gruppe aufgenommen zu werden.<br /><br />
 Version Beta 1:</br>
 - Erste Ver&ouml;ffentlichung mit BG1-Inhalten.<br />
 <br />
