update to Beta 3
Installation after bgqe should work in all cases now

--- a/c#brage/readme.c#brage.english.html
+++ b/c#brage/readme.c#brage.english.html
@@ -22,7 +22,7 @@
   <p><strong><a href="https://www.baldurs-gate.de/index.php">A Kerzenburgforum Modification</a><br />  </strong>
     Author: jastey<br />
 	Portrait Artist: Acifer<br />
-  <p><strong>Version Beta 1</a></strong><br />
+  <p><strong>Version Beta 3</a></strong><br />
     <strong> Languages:</strong> German, English<br />
     <strong>Platform: </strong>Windows</p> 
   <p>Brage's Redemption is a Quest Mod for BG1 and an NPC Mod for the whole Baldur's Gate Epic. It is natively compatible with BG:EE, SoD, BGII, BGT, BGII:EE, EET. No Tutu.</p>
@@ -141,12 +141,15 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Version History</a></h1>
 <div class="section">
+Version Beta 3:</br>
+- Installation after bgqe should work in all cases now.<br />
+<br />
 Version Beta 2:</br>
 - Soldier Hick inside the barracks should no longer approach the PC if Brage was brought in.<br />
 - If Brage was brought to the temple, Nalin will give a hint that the PC should talk to Oublek to proceed.<br />
 - If Brage was brought to Oublek, he will initiate dialogue to proceed the quest.<br />
 - After Brage accepted his real sword, there is no timer. The PC needs to leave the temple once. Upon return, Brage will ask to join the group.<br />
-<br /><br />
+<br />
 Version Beta 1:</br>
 - First public release with BG1 content.<br />
 <br />
