--- a/c#brage/readme.c#brage.german.html
+++ b/c#brage/readme.c#brage.german.html
@@ -22,7 +22,7 @@
   <p><strong><a href="https://www.baldurs-gate.de/index.php">Eine Kerzenburgforum-Modifikation</a><br />  </strong>
     Text und Coding: jastey<br />
 	Portrait: Acifer<br />
-  <p><strong>Version Beta 1</a></strong><br />
+  <p><strong>Version Beta 3</a></strong><br />
     <strong> Sprachen:</strong> Deutsch, Englisch<br />
     <strong>Platform: </strong>Windows</p> 
   <p>Brage's Redemption ist eine Questmod f&uuml;r BG1 und eine NSC Mod f&uuml;r das ganze Baldur's Gate Epos. Direkt kompatibel mit BG:EE, SoD, BGII, BGT, BGII:EE, EET. Nicht mit Tutu.</p>
@@ -142,6 +142,9 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Versionshistorie</a></h1>
 <div class="section">
+Version Beta 3:</br>
+- Installation nach bgqe sollte nun immer fehlerfrei funktionieren.<br />
+<br />
 Version Beta 2:</br>
 - Der Soldat Hick in der Kaserne ist nicht mehr da, nachmdem man Brage zurückgebracht hat.<br />
 - Wenn Brage zum Tempel gebracht wurde, gibt Nalin einen Hinweis, dass der HC mit Oublek sprechen sollte, um mit Barges Quest weiterzukommen.<br />
