--- a/c#brage/readme.c#brage.english.html
+++ b/c#brage/readme.c#brage.english.html
@@ -170,11 +170,20 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Version History</a></h1>
 <div class="section">
+Version 2:</br>
+- compatibility with Endless BG1 Mod added: for EE + EBG1, Brage will wait with his final Sarevok speech until after Sarevok is dead (always for BGT).<br />
+- (BGII) added a second comment if Brage wields Lilarcor for some time<br />
+- (BG1) Brage's comment to Bhaal heritage should not repeat after Tamoko dialogue.<br />
+- (BG1) Brage's comment to Bhaal heritage will fire after bg1npc "letter dialogue" (if bg1npc is installed) or after leaving the 5th level of the library.<br />
+- added c#brage.ini with mod info.<br />
+- added folder libiconv-1.9.2-1-src.7z with iconv licence info<br />
+<br />
 Version 1:</br>
 - Germen version completed<br />
 - typo corrections<br />
 - small changes in dialogues<br />
 - Kickout in BGII should not give BG1 dialogue<br />
+- added folder libiconv-1.9.2-1-src.7z with iconv licence info<br />
 <br />
 Version Beta 4:</br>
 - (BGT) erase all journal entries after transition to BGII<br />
