--- a/c#brage/readme.brage.english.html
+++ b/c#brage/readme.brage.english.html
@@ -170,6 +170,11 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Version History</a></h1>
 <div class="section">
+Version 3:</br>
+- English version proof read by Athies.<br />
+- Renamed readme to readme.brage.%LANGUAGE%.html<br />
+- Installation instructions in German readme translated.<br />
+<br />
 Version 2:</br>
 - compatibility with Endless BG1 Mod added: for EE + EBG1, Brage will wait with his final Sarevok speech until after Sarevok is dead (always for BGT).<br />
 - (BGII) added a second comment if Brage wields Lilarcor for some time<br />
@@ -179,7 +184,7 @@ Version 2:</br>
 - added folder libiconv-1.9.2-1-src.7z with iconv licence info<br />
 <br />
 Version 1:</br>
-- Germen version completed<br />
+- German version completed<br />
 - typo corrections<br />
 - small changes in dialogues<br />
 - Kickout in BGII should not give BG1 dialogue<br />
