--- a/c#brage/readme.brage.english.html
+++ b/c#brage/readme.brage.english.html
@@ -170,6 +170,10 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Version History</a></h1>
 <div class="section">
+Version 4:</br>
+- Brage's Sword Quest: Oublek should take Borda's Letter if shown as evidence.<br />
+- Brage should have kickout dialogue in BGII.<br />
+<br />
 Version 3:</br>
 - English version proof read by Athies.<br />
 - Renamed readme to readme.brage.%LANGUAGE%.html<br />
