--- a/c#brage/readme.brage.german.html
+++ b/c#brage/readme.brage.german.html
@@ -170,6 +170,11 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 
 <h1><a name="version" id="version">Versionshistorie</a></h1>
 <div class="section">
+Version 5:</br>
+- Revised kickout dialogue.<br />
+- Added SoD content.</br>
+- Compatibility with TRansitions Mod added.</br>
+<br />
 Version 4:</br>
 - Brage's Sword Quest: Oublek should take Borda's Letter if shown as evidence.<br />
 - Brage should have kickout dialogue in BGII.<br />
