--- a/c#brage/readme.brage.english.html
+++ b/c#brage/readme.brage.english.html
@@ -172,8 +172,9 @@ This mod is also not developed, supported, or endorsed by BioWare, Black Isle St
 <div class="section">
 Version 5:</br>
 - Revised kickout dialogue.<br />
-- Added SoD content.</br>
-- Compatibility with TRansitions Mod added.</br>
+- Patching of "Brage's Sword" quest from bgqe on EET should work always.</br>
+- Added basic SoD content.</br>
+- Compatibility with Transitions Mod added.</br>
 <br />
 Version 4:</br>
 - Brage's Sword Quest: Oublek should take Borda's Letter if shown as evidence.<br />
